--- a/visualBel.html
+++ b/visualBel.html
@@ -23,7 +23,7 @@
     </center> 
 
     <center>
-        <video src="/vid/Reporte AM _ Los conflictos bélicos y sus consecuencias.mp4" controls muted preload="none" autoplay loop></video>
+        <video src="/vid/Reporte AM _ Los conflictos bélicos y sus consecuencias.webm" controls muted preload="none" autoplay loop></video>
     </center>
 
     <center>
